# CM30225-Parallel-Computing-Coursework-1

./: CMakeLists.txt  README.md
src/: cw-collect-results.sh  cw-run.sh  debug.h  main.c  slurm_job_gen.py
src/matrix/: benchmark.c  benchmark.h  bmark.c  mat_factory.c  mat_smooth_parallel.c  matrix.c  matrix.h  matrixEdgeIterator.c  matrixEdgeIterator.h  matrixFactory.c  matrixFactory.h  matrixIterator.c  matrixIterator.h  matrixParallel.c  matrixParallel.h  matrixSmoother.c  matrixSmoother.h  spool.c  spool.h
src/worker/: smoothTask.c  smoothTask.h
